fix: hide modal scrollbar

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -888,3 +888,8 @@
   background-color: var(--default);
   border-radius: 5px;
 }
+
+// Hide Modal scrollbar
+#commonModal::-webkit-scrollbar{
+  display: none;
+}
